--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media (min-width: 220px){
+@media all and (min-width: 220px){
 
 a{
 	text-decoration: none;
@@ -404,419 +404,7 @@ li .br{
 
 }
 
-@media (min-width: 500px){
-
-a{
-	text-decoration: none;
-	color: #7b68ee;	
-}
-
-input[type=text]{
-	height: 25px;
-	width: 150px;
-	border: 3px solid rgb(123,104,238);
-	border-radius: 3px;
-	transition: width 0.8s;
-	color: rgb(123,104,238);
-}
-
-input[type=text]:focus {
-	border: 3px solid #ff6f03;
-	width: 300px;
-
-}
-
-body{
-	font-family: 'Roboto', sans-serif;
-	display: flex;
-	flex-direction: column;
-	color: #ffffff;
-	margin: 0;
-}
-header{
-	color: #AAAAAA;	
-	background-image: linear-gradient(rgba(123,104,238,0.5),rgba(255,127,80,0.5)), url("../img/chiara-luce-2.jpg");
-	background-repeat: no-repeat;   /* ENCONTRAR IMAGEM PARA COLOCAR NO FUNDO*/
-	background-size: 1300px 900px;	
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 800px;
-	font-size: 50px;
-	font-family: 'Cedarville Cursive', cursive;
-	border-bottom: 3px solid gray;
-}
-
-nav{
-	display: flex;
-	height: 10%;
-	background-color: rgba(255,255,255,0.6);
-	align-items: center;
-	position: fixed;
-	top: 0;
-	width: 100%;	
-}
-
-nav ul{
-	list-style: none;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-	height: 100%;
-	font-size: 20px;
-	margin: 0;
-}
-
-nav ul li{
-	border-radius: 5px;
-	padding: 5px;
-	align-items: center;
-}
-
-nav ul li a{
-	color: rgb(123,104,238);
-	text-decoration: none;
-}
-nav ul li a:hover{
-	color: #555555;
-	text-decoration: none;
-	cursor: pointer;
-}
-nav ul h4{
-	visibility: collapse;
-}
-.fa-search{
-	visibility: collapse;
-}
-.search{
-	visibility: collapse;
-}
-
-ul{
-	list-style: none;
-	padding: 0;
-}
-
-section{
-	background-color: #FFFFFF;
-	background-image: url(../img/chiara-bg.png);
-}
-
-.sec-home{
-	display: flex;
-	flex-direction: column;
-}
-
-.aba-esquerda{
-	padding-left: 5px; 
-	padding-right: 5px;
-}
-
-.aba-direita{
-	padding-left: 5px;
-	padding-right: 5px;
-}
-
-.links-uteis{
-	background-color: rgba(123,104,238,0.7);
-}
-
-.links-uteis h2{
-	background-color: rgba(123,104,238,0.5);
-	padding: 3px;
-	border: 2px solid rgba(123,104,238,0.9);
-	font-size: 25px;
-}
-.links-uteis a{
-	color: #FFFFFF;
-	background-color: rgba(0,0,0,0);
-}
-
-.links-uteis a:hover{
-	color: rgba(0,0,0,0.9);
-	cursor: pointer;
-}
-
-.links-uteis li{
-	padding: 10px;
-	margin-bottom: 5px;
-	background-color: rgba(0,0,0,0.1);
-	font-size: 20px;
-}
-
-.links-internos{
-	background-color: rgba(123,104,238,0.7);
-}
-
-.links-internos h2{
-	background-color: rgba(123,104,238,0.5);
-	padding: 3px;
-	border: 2px solid rgba(123,104,238,0.9);
-	font-size: 25px;
-}
-.links-internos a{
-	color: #FFFFFF;
-	background-color: rgba(0,0,0,0);
-	font-size: 20px;
-}
-
-.links-internos a:hover{
-	color: rgba(0,0,0,0.9);
-	cursor: pointer;
-}
-
-.links-internos li{
-	padding: 10px;
-	margin-bottom: 5px;
-	background-color: rgba(0,0,0,0.1);
-}
-
-.noticias{
-	background-color: rgba(123,104,238,0.7);
-}
-
-.noticias h2{
-	background-color: rgba(123,104,238,0.5);
-	padding: 3px;
-	border: 2px solid rgba(123,104,238,0.9);
-}
-.noticias a{
-	color: #FFFFFF;
-	background-color: rgba(0,0,0,0);
-}
-
-.noticias a:hover{
-	color: rgba(0,0,0,0.9);
-	cursor: pointer;
-}
-
-.noticias li{
-	padding: 10px;
-	margin-bottom: 5px;
-	background-color: rgba(0,0,0,0.1);
-}
-
-.noticia{
-	background-color: rgba(123,104,238,0.7);
-	margin-bottom: 5px;
-}
-
-.noticia h3{
-	background-color: rgba(123,104,238,0.5);
-	padding: 3px;
-	border: 2px solid rgba(123,104,238,0.9);
-	margin-bottom: 0;
-}
-.noticia a{
-	color: #FFFFFF;
-	background-color: rgba(0,0,0,0);
-}
-
-.noticia a:hover{
-	color: rgba(0,0,0,0.9);
-	cursor: pointer;
-}
-
-.noticia li{
-	padding: 10px;
-	margin-bottom: 5px;
-	background-color: rgba(0,0,0,0.1);
-}
-
-.descricao-noticia{
-	font-size: 15px;
-	padding-left: 10px;
-	margin: 0;	
-}
-
-.noticia-principal{
-	/*height: 40%;
-	width: 98%;*/
-	display: flex;
-	flex-direction: column;
-	align-items: center;	
-	
-}
-
-div .aba-principal{
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-}
-
-.imagem-principal{
-	width: 98%;
-}
-
-.imagem-principal img{
-	width: 80%;
-	height: 300px;
-	margin-top: 5px;
-	border: 2px solid white;
-	background-color: rgba(123,104,238,0.5);
-}
-
-.descricao-noticia-principal a{
-	margin-left: 20px;
-	padding: 3px;
-	background-color: rgba(255,255,255,0.6);
-	border-bottom: 4px solid rgba(123,104,238,0.5);
-	border-top: 4px solid rgba(123,104,238,0.5);
-	color: rgba(123,104,238);
-}
-
-.descricao-noticia-principal a:hover{
-	background-color:rgba(123,104,238,0.5);
-	color: #FFFFFF;
-	cursor: pointer;
-}
-.descricao-noticia-principal-sassello{
-	padding: 3px;
-	background-color: rgba(189, 137, 60, 0.52);
-	border-bottom: 4px solid rgba(0,0,0,0.5);
-	border-top: 4px solid rgba(0,0,0,0.5);
-	color: rgba(123,104,238);
-}
-.sec-contato{
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr;
-	height: 2400px;
-	background-color: #87CEFA;
-}
-
-.text h1{
-	font-size: 35px; 	
-	background-color: rgba(123,104,238,0.7);
-	border-left: 6px solid rgba(123,104,238,0.9);
-	vertical-align: center;
-	text-align: center;
-	color: #FFFFFF;;
-	width: 200px;
-}
-.text h2{
-	color: #555555;
-}
-
-.text{
-	padding-left: 5px;
-}
-
-.descricao{
-	font-size: 20px;
-	border-bottom: 4px solid white;
-}
-
-footer{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	height: 10%;
-	background-color: #aaaaaa;
-}
-
-.galeria{
-	display: block;
-	background-color: rgba(123,104,238,0.5);
-	margin: 5px;
-	text-align: center;
-	width:100%; 
-	margin: 0;
-	
-}
-
-.lista-paises:hover{
-	color: #FFFFFF;
-	cursor: pointer;
-}
-
-.imagem{
-	display: inline-block;
-	width: 230px;
-	height: 370px;
-	border: 3px solid rgba(123,104,238,0.5);
-	margin-bottom: 5px;
-	background-color: rgba(123,104,238,0.3);
-}
-img{
-	width: 200px;
-	height: 300px;
-	margin-top: 5px;
-	border: 2px solid white;
-	transition: width 1s, height 1s, transform 1s;
-	background-color: rgba(123,104,238,0.5);
-
-}
-
-.imagem img:hover{
-	transform: scale(1.5,1.5);
-}
-
-.form-contato{
-	display: flex;
-	flex-direction: column;
-	margin: 10px;
-	padding: 5px;
-	border: 5px solid rgba(208, 175, 158, 0.5);
-	background-color: rgba(208, 175, 158, 0.5);
-}
-
-.form-contato input{
-	padding: 5px;
-	margin-bottom: 5px;
-}
-
-input[type=submit]{
-	width: 120px;
-	border: 3px solid #FFFFFF;
-	border-radius: 3px;
-	color: #555555;
-	background-color: #ddffdb;
-}
-
-input[type=submit]:hover{
-	width: 120px;
-	border: 3px solid #FFFFFF;
-	border-radius: 3px;
-	color: #FFFFFF;
-	background-color: #8dff86;
-	cursor: pointer;
-}
-
-label{
-	color: #555555;
-}
-li .br{
-	width: 100px;
-	height: 100px;
-}
-.br{
-	background-image: url(../img/brazil.png);
-	width: 100px;
-	height: 50px;
-	background-size: 50px;
-	background-repeat: no-repeat;
-}
-.it{
-	background-image: url(../img/italy.png);
-	width: 100px;
-	height: 50px;
-	background-size: 50px;
-	background-repeat: no-repeat;
-}
-.uk{
-	background-image: url(../img/uk.png);
-	width: 100px;
-	height: 50px;
-	background-size: 50px;
-	background-repeat: no-repeat;
-}
-
-}
-
-@media (min-width: 320px){
+@media all and (min-width: 320px){
 
 a{
 	text-decoration: none;
@@ -1222,7 +810,7 @@ li .br{
 
 }
 
-@media (min-width: 500px){
+@media all and (min-width: 500px){
 
 a{
 	text-decoration: none;
@@ -1634,7 +1222,7 @@ li .br{
 
 }
 
-@media (min-width: 700px){
+@media all and (min-width: 700px){
 
 a{
 	text-decoration: none;
@@ -2030,7 +1618,7 @@ li .br{
 
 }
 
-@media (min-width: 1000px){
+@media all and (min-width: 1000px){
 
 a{
 	text-decoration: none;
@@ -2421,4 +2009,5 @@ li .br{
 }
 
 }
+
 
