--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header{
 nav{
 	display: flex;
 	height: 50px;
-	background-color: rgba(255,255,255,0.6);
+	background-color: red;
 	align-items: center;
 	font-size: 24px;	
 	position: fixed;
@@ -436,12 +436,12 @@ header{
 nav{
 	display: flex;
 	height: 50px;
-	background-color: rgba(255,255,255,0.6);
+	background-color: blue
 	align-items: center;
 	font-size: 24px;	
 	position: fixed;
 	top: 0;
-	width: 100%;
+	width: 100%;rgba(255,255,255,0.6);
 	font-family: 'Cedarville Cursive', cursive;
 }
 nav ul{
@@ -833,7 +833,7 @@ header{
 nav{
 	display: flex;
 	height: 10%;
-	background-color: rgba(255,255,255,0.6);
+	background-color: green;
 	align-items: center;
 	position: fixed;
 	top: 0;
@@ -1245,7 +1245,7 @@ header{
 nav{
 	display: flex;
 	height: 10%;
-	background-color: rgba(255,255,255,0.9);
+	background-color: yellow;
 	align-items: center;
 	position: fixed;
 	top: 0;
@@ -1651,7 +1651,7 @@ header{
 nav{
 	display: flex;
 	height: 10%;
-	background-color: rgba(255,255,255,0.9);
+	background-color: purple;
 	align-items: center;
 	position: fixed;
 	top: 0;
