--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header{
 nav{
 	display: flex;
 	height: 10%;
-	background-color: red;
+	background-color: rgba(255,255,255,0.6);
 	align-items: center;
 	position: fixed;
 	top: 0;
@@ -450,7 +450,7 @@ header{
 nav{
 	display: flex;
 	height: 10%;
-	background-color: black;
+	background-color: rgba(255,255,255,0.6);
 	align-items: center;
 	position: fixed;
 	top: 0;
@@ -856,7 +856,7 @@ header{
 nav{
 	display: flex;
 	height: 10%;
-	background-color: blue;
+	background-color: rgba(255,255,255,0.6);
 	align-items: center;
 	position: fixed;
 	top: 0;
@@ -1267,7 +1267,7 @@ header{
 nav{
 	display: flex;
 	height: 50px;
-	background-color: white;
+	background-color: rgba(255,255,255,0.6);
 	align-items: center;
 	font-size: 24px;	
 	position: fixed;
@@ -1663,7 +1663,7 @@ header{
 nav{
 	display: flex;
 	height: 50px;
-	background-color: green;
+	background-color: rgba(255,255,255,0.6);
 	align-items: center;
 	font-size: 24px;	
 	position: fixed;
